--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Link SASS -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./sass/main.css">
+    <link rel="stylesheet" href="./sass/main.scss">
+
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><img src="./images/iconos_logo/logo.png" alt="Logo de la empresa"></a>
+          <form class="d-flex">
+            <input class="form-control me-2 d-none d-lg-block" type="search" placeholder="Buscar" aria-label="Buscar">
+            <button class="btn btn-primary d-none d-lg-block" type="submit">Buscar</button>
+          </form>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,12 +39,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
-              </form>
             </li>
           </ul>
         </div>
