--- a/index.html
+++ b/index.html
@@ -218,27 +218,27 @@
 
       <div class="container">
         <div class="row">
-          <h3 class="text-center">Preguntas Frecuentes</h3>
-          <table>
-            <tr class="preguntas_frecuentes">
+          <h3 class="text-center p-3 display-6">Preguntas Frecuentes</h3>
+          <table class="preguntas_frecuentes d-flex justify-content-center">
+            <tr>
               <th>¿Que diferencia hay entre la proteccion parcial y total?</th>
             </tr>
-            <tr class="preguntas_frecuentes">
+            <tr>
               <th>¿Como me comunico con soporte si me surje una consulta?</th>
             </tr>
-            <tr class="preguntas_frecuentes">
+            <tr>
               <th>¿Hay promociones a nivel PYMES?</th>
             </tr>
-            <tr class="preguntas_frecuentes">
+            <tr>
               <th>¿Como trabajar en SafeGuard?</th>
             </tr>
-            <tr class="preguntas_frecuentes">
+            <tr>
               <th>¿El producto es de uso para el hogar?</th>
             </tr>
-            <tr class="preguntas_frecuentes">
+            <tr>
               <th>¿Que sucede si no renuevo SafeGuard?</th>
-            </tr class="preguntas_frecuentes">
-            <tr class="preguntas_frecuentes">
+            </tr>
+            <tr>
               <th>¿Con que dispositivos o sistemas operativos no es compatible el antivirus?</th>
             </tr>
           </table>
